# doral-courts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TODO.md  database.py  html_extractor.py  logger.py  main.py  pyproject.toml  scraper.py
.github/workflows/: tests.yml
.serena/: project.yml
docs/: FEATURES.md  FEATURE_IMPROVEMENTS.md  README.md  commands.md  date-formats.md  development.md  examples.md  feature-improvements.md  installation.md  monitoring-guide.md  reference.md
doral-courts/: database.py  html_extractor.py  logger.py  main.py  pyproject.toml  scraper.py  test_html_extractor.py  utils.py
scripts/: view_db.py
src/doral_courts/: __init__.py
src/doral_courts/cli/: __init__.py  _shared.py  main.py
src/doral_courts/cli/commands/: analyze_cmd.py  cleanup_cmd.py  data_cmd.py  favorites_cmd.py  history_cmd.py  list_available_slots_cmd.py  list_cmd.py  list_courts_cmd.py  list_locations_cmd.py  monitor_cmd.py  query_cmd.py  slots_cmd.py  stats_cmd.py  watch_cmd.py
src/doral_courts/core/: __init__.py  database.py  db_adapter.py  html_extractor.py  scraper.py
src/doral_courts/display/: __init__.py  detailed.py  lists.py  tables.py
src/doral_courts/utils/: __init__.py  config.py  date_utils.py  file_utils.py  logger.py
tests/: __init__.py  conftest.py
tests/unit/: test_cli.py  test_commands.py  test_database.py  test_date_utils.py  test_display.py  test_html_extractor.py  test_scraper.py
