[project]
name = "doral-courts"
version = "0.2.0"
description = "CLI app for showing Doral Tennis and Pickleball Courts availability"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Jorge Barnaby", email = "jorge.barnaby@gmail.com"}
]
keywords = ["tennis", "pickleball", "courts", "doral", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "rich>=14.0.0",
    "cloudscraper>=1.2.71",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.10",
]

[project.urls]
Homepage = "https://github.com/yorch/doral-courts"
Repository = "https://github.com/yorch/doral-courts"
Issues = "https://github.com/yorch/doral-courts/issues"
Documentation = "https://github.com/yorch/doral-courts/docs"

[project.scripts]
doral-courts = "doral_courts.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
# G004 forbids f-strings in logging calls (use lazy %-style formatting).
select = ["E", "W", "F", "I", "N", "B", "A", "S", "T", "ANN", "G004"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# In tests: allow assert (S101), skip annotation requirements (ANN), and don't
# enforce line length on embedded HTML/JSON fixtures (E501).
"tests/*" = ["S101", "ANN", "E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = ["cloudscraper", "bs4", "psycopg2", "yaml", "requests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Floor below current coverage; ratchet up as the suite grows.
fail_under = 60
