[project]
name = "doral-courts"
version = "0.1.0"
description = "CLI app for showing Doral Tennis and Pickleball Courts availability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
doral-courts = "main:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
