[project]
name = "doral-courts"
version = "0.1.0"
description = "CLI app for showing Doral Tennis and Pickleball Courts availability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "click>=8.2.0",
    "rich>=14.0.0",
    "cloudscraper>=1.2.0",
]

[project.scripts]
doral-courts = "main:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
